k8s/service2/service2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: service2                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
     labels:
       app: service2               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: service2:0.1       # образ Docker
          imagePullPolicy: Never   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: service2           # ім'я контейнеру
          ports:
            - containerPort: 8080
